daemon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: tomcatdeployment
  namespace: dev-namespace
spec:
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      name: tomcat-nginix
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: prajwal1327/mytomcat:1.1.6
