deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: dev-namespace
spec:
  replicas: 2
  selector:
   matchLabels:
     app: jenkins
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: jenkins
      labels:
        app: jenkins
    spec:
      volumes:
      - name: "jenkins-test"
        hostPath:
          path: "/opt/efs"
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        volumeMounts:
        - mountPath: "/var/jenkins_home"
          name: "jenkins-test"
