myfirstpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-jenkins
  namespace: dev-namespace
  labels: 
     app: tomcat
spec:
  containers:
  - name: mytomcat
    image: prajwal1327/mytomcat:1.1.6
    resources:
      limits: 
        cpu: "400m"
        memory: "250Mi"
      requests: 
        memory: "150Mi"
        cpu: "400m"
