podaffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: dev-namespace
spec:
  replicas: 3
  selector:
   matchLabels:
     app: tomcat
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 2
  template:
    metadata:
      name: tomcat-nginx
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: krishna123456/tomcat:1.11.111
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - tomcat
            topologyKey: "kubernetes.io/hostname"
