privatepod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
  labels:
    app: jenk
spec:
  containers:
  - name: private-reg-container
    image: sharath03/myjenkins:latest
  imagePullSecrets:
  - name: regcred
