ingresstom.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-pod
  labels:
    app: tomcat
spec:
  containers:
  - name: tomcat
    image: sharath03/tomcat_maven:21
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-loadb
spec:
  selector:
    app: tomcat
  ports:
    - name: tomcat
      protocol: TCP
      targetPort: 8080
      port: 8080
