load.yaml
apiVersion: v1
kind: Service
metadata: 
  name: service-loadbalancer
spec:
  selector:
    app: jenk
  type: LoadBalancer
  ports: 
  - name: tomcat
    protocol: TCP
    targetPort: 8080
    port: 8080
  - name: nginx
    protocol: TCP
    targetPort: 80
    port: 80
