nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  selector:
    app: tomcat
  type: NodePort
  ports: 
    - name: tomcat
      protocol: TCP
      targetPort: 8080
      port: 8080
      nodePort: 30001
    - name: nginx
      protocol: TCP
      targetPort: 80
      port: 80
      nodePort: 30002
